--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,11 +1,12 @@
 {
   "name": "package",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "assignment",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "node server.js"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -20,8 +21,16 @@
   "bugs": {
     "url": "https://github.com/NihhZaeyy/backend_assignment_1/issues"
   },
-  "homepage": "https://github.com/NihhZaeyy/backend_assignment_1#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
